--- a/app/static/index.html
+++ b/app/static/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/xterm.min.css"
-          integrity="sha256-uTIrmf95e6IHlacC0wpDaPS58eWF314UC7OgdrD6AdU=" crossorigin="anonymous"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js" 
         integrity="sha256-chlNFSVx3TdcQ2Xlw7SvnbLAavAQLO0Y/LBiWX04viY=" crossorigin="anonymous"></script>
     <style>
@@ -178,8 +176,14 @@
                                 @blur="load_do_regions"/>
                         </div>
                         <div class="form-group">
-                            <label for="id_region">What region should the server be located in?</label>
-                            <select name="region" id="id_region" class="form-control" v-model="extra_args.region">
+                            <label v-if="do_regions.length > 0" for="id_region">What region should the server be located in?</label>
+                            <label v-if="do_regions.length === 0" for="id_region">Please enter API key above to select region</label>
+                            <label v-if="do_region_loading" for="id_region">Loading regions...</label>
+                            <select name="region"
+                                id="id_region"
+                                class="form-control"
+                                v-model="extra_args.region"
+                                v-bind:disabled="do_region_loading">
                                 <option value="" disabled>Select region</option>
                                 <option
                                     v-for="(region, index) in do_regions"
@@ -213,7 +217,8 @@
         </div>
         <div v-if="status === 'done'">
             <pre class="console">{{program.join(' ')}}</pre>
-            <div class="text-success">Done!</div>
+            <div v-if="is_success" class="text-success">Done!</div>
+            <div v-else class="text-danger">Failed!</div>
         </div>
     </div>
 </footer>
