--- a/app/static/index.html
+++ b/app/static/index.html
@@ -115,7 +115,7 @@
         playbook: {},
         step: 'setup',
         extra_args: {
-          server_name: 'algo2',
+          server_name: 'algo',
           ondemand_cellular: false,
           ondemand_wifi: false,
           dns_adblocking: false,
